<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="Account_Details">Account Details</string>
    <string name="Account_name">Account name</string>
    <string name="ApplicationPreferences">Application Preferences</string>
    <string name="Away">Away</string>
    <string name="Blotter">Friend Activity</string>
    <string name="Busy">Busy</string>
    <string name="Cancel">Cancel</string>
    <string name="Cart">Cart</string>
    <string name="Catalog">Catalog</string>
    <string name="Chat">Chat</string>
    <string name="ChatSendErrorRetry">Could not send, tap to try again</string>
    <string name="Chat_Headline_Message">Never tell your password to anyone.</string>
    <string name="Chat_Load_More_Msgs">Loading earlier messages...</string>
    <string name="Chat_Tap_to_Compose_Hint">Tap to chat</string>
    <string name="Chat_clear_history">Clear Chat History</string>
    <string name="Chats">Recent Chats</string>
    <string name="Community_Caps">COMMUNITY</string>
    <string name="ConfirmationTitle">Steam</string>
    <string name="Confirmations">Confirmations</string>
    <string name="DO_NOT_LOCALIZE_COOKIE_Steam_Language">english</string>
    <string name="Edit">Edit</string>
    <string name="Email_code">Steam Guard code</string>
    <string name="Exit_Application">Exit Application</string>
    <string name="Exit_Caps">EXIT</string>
    <string name="Friend_Activity">Friend Activity</string>
    <string name="Friend_Is_Offline">Friend is Offline</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="Friend_Search_All">Search All Players</string>
    <string name="Friends">Friends</string>
    <string name="Group_Invites">Group Invites</string>
    <string name="Group_Num_Members_Online">Online</string>
    <string name="Group_Num_Members_Total">Members</string>
    <string name="Group_Search_All">Search All Groups</string>
    <string name="Groups">Groups</string>
    <string name="In_Game">In-Game</string>
    <string name="Inventory">Inventory</string>
    <string name="LastOnline_DaysAgo">Last Online: # days ago</string>
    <string name="LastOnline_HoursAgo">Last Online: # hours ago</string>
    <string name="LastOnline_MinutesAgo">Last Online: # minutes ago</string>
    <string name="LastOnline_SecondsAgo">Last Online: # seconds ago</string>
    <string name="LastOnline_YearOrMore">Last Online: more than 1 year ago</string>
    <string name="Library">Library</string>
    <string name="Loading">Loading...</string>
    <string name="Logging_Into_Steam">Logging Into Steam...</string>
    <string name="Logging_OutOf_Steam">Logging off...</string>
    <string name="Login">Sign In</string>
    <string name="Login_For_Friends">You must be logged in to use the Steam Community</string>
    <string name="Market_Unavailable">Market is Unavailable</string>
    <string name="My_Profile">My Profile</string>
    <string name="News_Feeds_Caps">NEWS FEEDS</string>
    <string name="Notifications">Notifications</string>
    <string name="Official_Groups">Official Groups</string>
    <string name="Offline">Offline</string>
    <string name="Online">Online</string>
    <string name="Password">password</string>
    <string name="Playing">Playing</string>
    <string name="Private_Groups">Private Groups</string>
    <string name="Profile">Profile</string>
    <string name="Public_Groups">Public Groups</string>
    <string name="Refresh">Refresh</string>
    <string name="Reload">Reload</string>
    <string name="SSA_Agree">By signing in, you agree to the <u>Steam Subscriber Agreement</u>.</string>
    <string name="Search">Search</string>
    <string name="SearchBar_Tap_to_Search_Hint">Tap to search</string>
    <string name="Search_Groups_Results">Groups: #</string>
    <string name="Search_Label_Failed">Search failed, please try again later</string>
    <string name="Search_Label_Results">Showing # results out of $</string>
    <string name="Search_Label_ResultsAll">Found # results</string>
    <string name="Search_Label_ResultsNone">Search produced no results</string>
    <string name="Search_Label_Searching">Searching...</string>
    <string name="Search_Players_Results">Players: #</string>
    <string name="Send">Send</string>
    <string name="Settings">Settings</string>
    <string name="Settings_About">About</string>
    <string name="Settings_Caps">SETTINGS</string>
    <string name="Settings_Version">Version</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Snooze">Snooze</string>
    <string name="Steam">Steam</string>
    <string name="SteamMobile_Steamguard_BadCode">Bad activation code</string>
    <string name="Steam_Guard">Steam Guard</string>
    <string name="Steam_Guard_Caps">STEAM GUARD</string>
    <string name="Steam_Guard_Copied">Steam Guard code copied to clipboard.</string>
    <string name="Steam_Guard_Error">Error encountered while acquiring Steam Guard code. Please try again later.</string>
    <string name="Steam_Guard_Notification">Steam Guard code notification</string>
    <string name="Steam_News">Steam News</string>
    <string name="Steam_Specials">Specials</string>
    <string name="Store">Store</string>
    <string name="Store_Caps">STORE</string>
    <string name="Syndicated">Syndicated</string>
    <string name="Unknown">Unknown</string>
    <string name="Username">username</string>
    <string name="Verification_Code">Verification Code</string>
    <string name="Web_Error_Reload">Failed to load required resource, please click here to try again.</string>
    <string name="Web_Error_Retry_Now">Retry Now</string>
    <string name="Web_Error_Title">Error</string>
    <string name="Wishlist">Wishlist</string>
    <string name="account_does_not_own_app">Account not part of the beta.</string>
    <string name="account_does_not_own_app_EXPLAIN">Thank you for your interest in the Steam mobile beta. We have made a note of your account and will be sending out more invites shortly.</string>
    <string name="agecheckfailed">You are not old enough to view that content.</string>
    <string name="app_name">Steam</string>
    <string name="chat_go_offline">Go Offline</string>
    <string name="chat_go_online">Go Online</string>
    <string name="chat_is_offline">Chat is Offline</string>
    <string name="current_user">"logged in as
"</string>
    <string name="date_not_set">Date Not Set</string>
    <string name="download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="download_failed_dialog_negative_button">Cancel</string>
    <string name="download_failed_dialog_positive_button">Retry</string>
    <string name="download_failed_dialog_title">Download Failed</string>
    <string name="incorrect_login">Incorrect login.</string>
    <string name="invalid_request">Please enter a Steam username and password.</string>
    <string name="invalid_steamguard_code">The Steam Guard code you have entered is incorrect. Please try again.</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_community">Community</string>
    <string name="menu_community_broadcasts">Broadcasts</string>
    <string name="menu_community_discussions">Discussions</string>
    <string name="menu_community_greenlight">Greenlight</string>
    <string name="menu_community_home">Home</string>
    <string name="menu_community_market">Market</string>
    <string name="menu_community_workshop">Workshop</string>
    <string name="menu_personal">You &amp; Friends</string>
    <string name="menu_personal_activity">Activity</string>
    <string name="menu_personal_badges">Badges</string>
    <string name="menu_personal_content">Content</string>
    <string name="menu_personal_friends">Friends</string>
    <string name="menu_personal_groups">Groups</string>
    <string name="menu_personal_inventory">Inventory</string>
    <string name="menu_personal_profile">Profile</string>
    <string name="menu_support">Support</string>
    <string name="network_error">"Sorry, there has been a network error. Please check your device's network settings and try again."</string>
    <string name="nonsteam_link_ok">View Link</string>
    <string name="steamguard_change_button">Change Settings</string>
    <string name="steamguard_help_button">Help</string>
    <string name="steamguard_scheme_email">Email</string>
    <string name="steamguard_rcode_button">My Recovery Code</string>
</resources>