<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/splitView_Contents" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/twofactor_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.valvesoftware.android.steam.community.fragment.TwoFactorCodeListView android:id="@id/two_factor_code_list_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/settings_placeholder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/twofactor_container">
        <LinearLayout android:orientation="vertical" android:id="@id/steamguard_change_button_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.valvesoftware.android.steam.community.views.SteamWebButton android:textColor="@color/settings_steamguard_button_text" android:id="@id/steamguard_change_button" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/steamguard_change_button" custom:detailText="@string/steamguard_scheme_email" custom:topBorder="true" />
            <com.valvesoftware.android.steam.community.views.SteamWebButton android:textColor="@color/settings_steamguard_button_text" android:id="@id/steamguard_rcode_button" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/steamguard_rcode_button" custom:topBorder="true" />
            <com.valvesoftware.android.steam.community.views.SteamWebButton android:textColor="@color/settings_steamguard_button_text" android:id="@id/steamguard_help_button" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/steamguard_help_button" custom:topBorder="true" custom:bottomBorder="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>