<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/chat_view_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.valvesoftware.android.steam.community.views.RobotoRegularTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/chat_is_offline_notice" android:background="#ff660000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="25.0sp" android:text="@string/chat_is_offline" android:singleLine="true" />
    <ListView android:scrollbarStyle="insideInset" android:id="@id/chat_view_contents" android:background="@color/primary_background" android:layout_width="fill_parent" android:layout_height="0.0dip" android:stackFromBottom="true" android:transcriptMode="alwaysScroll" android:cacheColorHint="@color/primary_background" android:divider="@color/primary_background" android:dividerHeight="0.0px" android:fillViewport="true" android:layout_weight="1.0" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="end" android:gravity="center" android:id="@id/chat_view_status" android:background="#ff660000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="25.0sp" android:text="" android:singleLine="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/chat_say_layout" android:background="@color/chat_text_entry_area_background" android:padding="4.0dip" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="60.0sp">
        <EditText android:textSize="16.0sp" android:textColor="@color/primary_foreground" android:layout_gravity="center_vertical" android:id="@id/chat_view_say_text" android:background="@color/chat_edittext_background" android:paddingLeft="5.0sp" android:paddingTop="0.0sp" android:paddingBottom="0.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="32.0sp" android:hint="@string/Chat_Tap_to_Compose_Hint" android:maxLines="3" android:singleLine="false" android:maxLength="10000" android:layout_weight="1.0" android:inputType="textAutoCorrect|textCapSentences|textMultiLine|textShortMessage" android:imeOptions="actionSend" />
        <Button android:layout_gravity="center_vertical" android:id="@id/chat_view_say_button" android:layout_width="wrap_content" android:layout_height="40.0sp" android:text="@string/Send" />
    </LinearLayout>
</LinearLayout>